fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,7 @@ ul {
 
 .ft-article {
   width: 570px;
-  padding: 80px;
+  padding: 70px;
 }
 
 .ft-article h1 {
